# lab3

./: .FuncA.cpp.swp  .HTTP_Server.cpp.swo  .HTTP_Server.cpp.swp  .Makefile.am.swp  .configure.ac.swp  Dockerfile  FuncA.cpp  FuncA.h  HTTP_Server.cpp  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  configure~  deb.deb  main.cpp  my_program  scriptA.sh  scriptB.sh
.deps/: FuncA.Po  HTTP_Server.Po  main.Po
.github/workflows/: c-cpp.yml
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
deb/DEBIAN/: control
deb/usr/local/share/funca/: data.txt
deb/usr/local/share/man/man1/: Funk.1
tests/: .main.cpp.swp  Makefile  Makefile.am  Makefile.in  funcatest  main.cpp
tests/.deps/: main.Po
